--- a/modulo2.html
+++ b/modulo2.html
@@ -1,31 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <script src="script.js"></script>
-</head>
-<body>
-    <div>
-        <div id="profile-background"><img src="images/slide_02.jpg"></div>
-        <div id="info" style="padding: 16px">
-            <div id="info-img">
-                <img class="profile-image" src="images/MiFotoCirculo.png">
-                <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a> </div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leandro Quipildor</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- Mis estilos CSS -->
+    
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link href="css/misEstilos_01.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosEncabezado.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosBanner.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosAcercaDeMi.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosExpLaboral.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosEducacion.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosSkills.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosProyectos.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosPieDePagina.css" rel="stylesheet" type="text/css" >
+    <link href="css/estilosLogin.css" rel="stylesheet" type="text/css" >
 
-            <div id="info-data">
-                <div>
-                    <h1>Leandro Quipildor</h1>
-                    <div id="info-company"></div>
-                </div>
-            </div>
-        
+  </head>
+  <body>
+    <div class="container contPP">
+    <!-- Menu superior comienzo -->
+    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark" id="menuSuperior">
+      <div class="container-fluid">
+        <a
+          class="navbar navbar-brand"
+          href="https://argentinaprograma.inti.gob.ar/"
+          target="_blank"
+        >
+          <img
+            src="images/ArgentinaPrograma_Logo-40Alto.png"
+            alt="Logo Argentina Programa"
+            class="d-inline-block align-text-top"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0 navbar-right">
+            <!--me-auto-->
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+
+            <li class="nav-item">
+              <button type="button" class="btn btn-primary">Login</button>
+            </li>
+
+            <!--
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            -->
+          </ul>
+
+          <!--
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            -->
         </div>
+      </div>
+    </nav>
+    <!--Fin del menu superior -->
+    <div class="card mat-card" id="first-card">
+      <div id="profile-background">
+        <img src="images/slide_02.jpg" />
+      </div>
+      <div id="info" class="ficha">
+        <div id="info-img">
+          <img class="profile-image" src="images/MiFotoCirculo.png" />
+          <div class="btn-edit btn-edit-foto">
+            <a href="#" class="btn-right"><i class="fa fa-pen"></i></a>
+          </div>
+        </div>
+        <div class="limpiarFloat"></div>
+        <div id="info-data" class="kcol-xl-4">
+          <div>
+            <h1>Leandro Quipildor</h1>
+            <div id="info-titulo">Programador | Profesor de Informática</div>
+            <div id="info-company">Desempleado</div>
+            <div id="info-contact">
+              <span>Buenos Aires (Argentina)</span>
+              <span><a href="#">Información de contacto</a></span>
+            </div>
+          </div>
+          <ul id="info-details" class="kcol-xl-8">
+            <li>
+              <a href="#">
+                <img src="" /><!--Logo del lugar de trabajo-->
+                <h2></h2>
+                <!--Nombre del lugar de trabajo-->
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="" /><!--Logo del lugar de trabajo-->
+                <h2></h2>
+                <!--Nombre del lugar de trabajo-->
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div id="info-actions" class="">
+          <button type="button" class="btn btn-primary">
+            Tengo interes en
+          </button>
+          <button type="button" class="btn btn-light">Añadir sección</button>
+          <button type="button" class="btn btn-light">Más</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mat-card">
+      <div class="card-titles">
+        <h2>Acerca de</h2>
+        <div class="btn-edit" onclick="cambiar_parrafo()">
+          <a href="#" class="btn-right">
+            <i class="fa fa-pen"></i>
+          </a>
+        </div>
+      </div>
+      <div>
+        <p id="text-acercade">
+          Entusiasta de la informática y profesor todavía sin ejercer
+        </p>
+      </div>
+      <div>
+        <input
+          id="edit-acercade"
+          type="text"
+          oninput="myFunction2(this.value)"
+          style="display: none"
+        />
+      </div>
+    </div>
+
+    <input type="file" id="file1" onChange="showFile(this)" />
 
     </div>
-</body>
+
+    <script
+      src="https://kit.fontawesome.com/55d8f7505d.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+
+    <script>
+      function cambiar_parrafo() {
+        document.getElementById("edit-acercade").style.display = "block";
+        let texto = document.getElementById("text-acercade").innerText;
+        console.log(texto);
+      }
+
+      function myFunction2(valor) {
+        document.getElementById("text-acercade").innerText = valor;
+      }
+
+      function logMessage(message) {
+        console.log(message + "<br>");
+      }
+
+      let textarea = document.getElementById("edit-acercade");
+      textarea.addEventListener("keyup", (e) => {
+        logMessage('Key "${e.key}" released [event:keyup]');
+        if (e.key == "Enter") {
+          document.getElementById("edit-acercade").style.display = "none";
+        }
+      });
+
+      function showFile(input) {
+        let file = input.files[0];
+        alert("Nombre del archivo: ${file.name}");
+        alert("Modificado el: ${file.lastModified}");
+
+        let reader = new FileReader();
+        reader.readAsText(file);
+        reader.onload = function () {
+          console.log(reader.result);
+          document.getElementById("text-acercade").innerText = reader.result;
+        };
+        reader.onerror = function () {
+          console.log(reader.error);
+        };
+      }
+    </script>
+  </body>
 </html>
