Modificando Acerca de mi... para botones al lado - V2

--- a/modulo2.html
+++ b/modulo2.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <!-- Mis estilos CSS -->
-    
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" >
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link href="css/misEstilos_01.css" rel="stylesheet" type="text/css" >
     <link href="css/estilosEncabezado.css" rel="stylesheet" type="text/css" >
@@ -153,7 +153,7 @@
 
     <div class="card mat-card" id="second-card">
       <div id="fichaAcercaDeMi" class="ficha">
-        <h1 class="tituloFicha">Acerca de mi...  </h1>
+        <h1 class="tituloFicha tituloAcercaDM">Acerca de mi...  </h1>
 <!--
         <div class="btn-edit lapizALaDerecha" onclick="cambiar_parrafo()">
           <a href="#" class="btn-right">
@@ -175,7 +175,7 @@
             </a>
           </div>
         </div>
-<!--
+
         <div id="contParrafosAcercaDeMi" class="contParrafosAcercaDeMi" >
           <div id="text-acercaDeMi-2" class="contIndividual-P">
             <p id="" class="text-P-acercaDeMi">
@@ -195,17 +195,41 @@
             </div>
           </div>
 
+          <div id="" class="contIndividual-P">
+            <p id="" class="text-P-acercaDeMi">
+              Me recibí de Profesor de Informática hace poco y todavía no comencé a ejercer, estoy haciendo cursos 
+              para poder subir puntaje y empezar a realizar suplencias.
+            </p>
+            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
+                <i class="fa fa-pen"></i>
+              </a>
+            </div>
+            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Eliminar Párrafo...">
+                <i class="far fa-trash-alt"></i>
+              </a>
+            </div>
+          </div>
+          <div id="" class="contIndividual-P">
+            <p id="" class="text-P-acercaDeMi">
+              Otra cosa que disfruto, y comparto con mi novia, es viajar por mi pais (aunque también tengo ganas de conocer 
+              Brasil), y disfrutar de las comidas tradicionales de cada provincia o ciudad. 
+            </p>
+            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
+                <i class="fa fa-pen"></i>
+              </a>
+            </div>
+            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Eliminar Párrafo...">
+                <i class="far fa-trash-alt"></i>
+              </a>
+            </div>
+          </div>
 
-          <p id="" class="text-acercaDeMi">
-            Me recibí de Profesor de Informática hace poco y todavía no comencé a ejercer, estoy haciendo cursos 
-            para poder subir puntaje y empezar a realizar suplencias.
-          </p>
-          <p id="" class="text-acercaDeMi">
-            Otra cosa que disfruto, y comparto con mi novia, es viajar por mi pais (aunque también tengo ganas de conocer 
-            Brasil), y disfrutar de las comidas tradicionales de cada provincia o ciudad. 
-          </p>
         </div>
--->
+
       </div>
 <!--
       <div>
