--- a/modulo2.html
+++ b/modulo2.html
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-
+<!-- Ficha Acerca de mi... -->
     <div class="card mat-card" id="second-card">
       <div id="fichaAcercaDeMi" class="ficha">
         <h1 class="tituloFicha tituloAcercaDM">Acerca de mi...  </h1>
@@ -241,6 +241,93 @@
         />
       </div>
 -->
+    </div>
+<!-- Ficha Experiencia Laboral -->
+    <div class="card mat-card" id="third-card">
+      <div id="fichaExpLaboral" class="ficha">
+        <h1 class="tituloFicha tituloExpLaboral">Experiencia laboral  <a href="#" class="btn-plus" title="Agregar Lugar de Trabajo" ><i class="fas fa-plus-circle"></i></a> </h1>
+<!--
+        <div id="contResumenExpLab">
+          <p id="text-acercaDeMi-1" class="text-acercaDeMi">
+            Entusiasta de la informática y profesor todavía sin ejercer.
+          </p>
+          <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+            <a href="#" class="btn-right" title="Modificar Resumen Sobre Mi...">
+              <i class="fa fa-pen"></i>
+            </a>
+          </div>
+        </div>
+-->
+
+        <div id="contBloquesExpLab" class="contBloquesExpLab" >
+          <div id="text-expLab-2" class="contIndividual-expLab">
+            <div class="contInfo-expLab grow1_ col-sm-9">
+              <h5 id="" class="nombreEmpresa-expLab">Ro-Dubi SRL (Magika)</h5>
+              <div class="fechas-expLab">2002 - 2018</div>
+              <div class="descripcion-expLab">
+                Trabajé como operario realizando tareas varias, especialmente de producción fabricando, armando 
+                y embalando distintos tipos de juguetes y carpetas.
+              </div>
+            </div>
+            <div class="contImg-expLab col-sm-2 centrar-h">
+              <img src="images/logo-magika-2.png" alt="Logo Magika" class="logoExpLab">
+            </div>
+            <div class="contBtn-expLab col-sm-1 centrar-h">
+              <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Modificar Datos de Trabajo...">
+                  <i class="fa fa-pen"></i>
+                </a>
+              </div>
+              <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Eliminar Datos de Trabajo...">
+                  <i class="far fa-trash-alt"></i>
+                </a>
+              </div>
+            </div>
+<!--
+            <div class="contDer-expLab">
+
+            </div>
+          -->
+          </div>
+<!--
+          <div id="" class="contIndividual-P">
+            <p id="" class="text-P-acercaDeMi">
+              Me recibí de Profesor de Informática hace poco y todavía no comencé a ejercer, estoy haciendo cursos 
+              para poder subir puntaje y empezar a realizar suplencias.
+            </p>
+            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
+                <i class="fa fa-pen"></i>
+              </a>
+            </div>
+            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Eliminar Párrafo...">
+                <i class="far fa-trash-alt"></i>
+              </a>
+            </div>
+          </div>
+          <div id="" class="contIndividual-P">
+            <p id="" class="text-P-acercaDeMi">
+              Otra cosa que disfruto, y comparto con mi novia, es viajar por mi pais (aunque también tengo ganas de conocer 
+              Brasil), y disfrutar de las comidas tradicionales de cada provincia o ciudad. 
+            </p>
+            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
+                <i class="fa fa-pen"></i>
+              </a>
+            </div>
+            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+              <a href="#" class="btn-right" title="Eliminar Párrafo...">
+                <i class="far fa-trash-alt"></i>
+              </a>
+            </div>
+          </div>
+-->
+        </div>
+
+      </div>
+
     </div>
 
     <input type="file" id="file1" onChange="showFile(this)" />
