Modificando Ficha Educacion - V1

--- a/modulo2.html
+++ b/modulo2.html
@@ -290,40 +290,69 @@
             </div>
           -->
           </div>
-<!--
-          <div id="" class="contIndividual-P">
-            <p id="" class="text-P-acercaDeMi">
-              Me recibí de Profesor de Informática hace poco y todavía no comencé a ejercer, estoy haciendo cursos 
-              para poder subir puntaje y empezar a realizar suplencias.
-            </p>
-            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
-              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
-                <i class="fa fa-pen"></i>
-              </a>
+
+        </div>
+      </div>
+    </div>
+
+<!-- Ficha Educación -->
+    <div class="card mat-card" id="fourth-card">
+      <div id="fichaEducacion" class="ficha">
+        <h1 class="tituloFicha tituloEducacion">Educación  <a href="#" class="btn-plus" title="Agregar Lugar de Educación/Título" ><i class="fas fa-plus-circle"></i></a> </h1>
+
+        <div id="contBloquesEducacion" class="contBloquesEducacion" >
+          <div id="text-educacion-2" class="contIndividual-educacion">
+            <div class="contInfo-educacion grow1_ col-sm-9">
+              <h5 id="" class="nombreInstituto-educacion">Profesorado del Consudec</h5>
+              <div class="fechas-educacion">2015 - 2019 (Completado)</div>
+              <div class="titulo-educacion">
+                <b>Título: </b> Profesor de Educación Secundaria en Informática
+              </div>
             </div>
-            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
-              <a href="#" class="btn-right" title="Eliminar Párrafo...">
-                <i class="far fa-trash-alt"></i>
-              </a>
+            <div class="contImg-educacion col-sm-2 centrar-h">
+              <img src="images/logo-consudec.png" alt="logo Consudec" class="logoInstitutoEduc">
+            </div>
+            <div class="contBtn-educacion col-sm-1 centrar-h">
+              <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Modificar Datos Educativos...">
+                  <i class="fa fa-pen"></i>
+                </a>
+              </div>
+              <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Eliminar Datos de Educación...">
+                  <i class="far fa-trash-alt"></i>
+                </a>
+              </div>
             </div>
           </div>
-          <div id="" class="contIndividual-P">
-            <p id="" class="text-P-acercaDeMi">
-              Otra cosa que disfruto, y comparto con mi novia, es viajar por mi pais (aunque también tengo ganas de conocer 
-              Brasil), y disfrutar de las comidas tradicionales de cada provincia o ciudad. 
-            </p>
-            <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
-              <a href="#" class="btn-right" title="Modificar Párrafo Sobre Mi...">
-                <i class="fa fa-pen"></i>
-              </a>
+
+          <hr class="separador-educacion" />
+
+          <div id="text-educacion-2" class="contIndividual-educacion">
+            <div class="contInfo-educacion grow1_ col-sm-9">
+              <h5 id="" class="nombreInstituto-educacion">Universidad Nacional de La Matanza</h5>
+              <div class="fechas-educacion">2010 - 2016 (Completado)</div>
+              <div class="titulo-educacion">
+                <b>Título: </b> Técnico Universitario en Web
+              </div>
             </div>
-            <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
-              <a href="#" class="btn-right" title="Eliminar Párrafo...">
-                <i class="far fa-trash-alt"></i>
-              </a>
+            <div class="contImg-educacion col-sm-2 centrar-h">
+              <img src="images/logo-unlam.png" alt="logo UNLaM" class="logoInstitutoEduc">
+            </div>
+            <div class="contBtn-educacion col-sm-1 centrar-h">
+              <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Modificar Datos Educativos...">
+                  <i class="fa fa-pen"></i>
+                </a>
+              </div>
+              <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right" title="Eliminar Datos de Educación...">
+                  <i class="far fa-trash-alt"></i>
+                </a>
+              </div>
             </div>
           </div>
--->
+
         </div>
 
       </div>
