--- a/modulo2.html
+++ b/modulo2.html
@@ -11,6 +11,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- Estilos de barra de progreso circular -->
+    <link href="css/barrasDeProgreso.css" rel="stylesheet">
     <!-- Mis estilos CSS -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css" >
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -359,7 +361,66 @@
 
     </div>
 
-    <input type="file" id="file1" onChange="showFile(this)" />
+    <!-- Ficha Skill's -->
+    <div class="card mat-card" id="fourth-card">
+      <div id="fichaEducacion" class="ficha">
+        <h1 class="tituloFicha tituloSkill">Habilidades / Conocimiento  <a href="#" class="btn-plus" title="Agregar Habilidad o Conocimiento" ><i class="fas fa-plus-circle"></i></a> </h1>
+        <div id="contBloquesSkill" class="contBloquesSkill" >
+          <div id="text-skill-2" class="contIndividual-skill">
+
+
+            <div class="col-md-4 centrar-h">
+              <div class="progress yellow"> <span class="progress-left"> <span class="progress-bar"></span> </span> <span class="progress-right"> <span class="progress-bar"></span> </span>
+                <div class="progress-value">
+                  37.5%
+                </div>
+              </div>
+
+              <div class="contBtn-educacion col-sm-1 centrar-h">
+                <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+                  <a href="#" class="btn-right" title="Modificar Datos Educativos...">
+                    <i class="fa fa-pen"></i>
+                  </a>
+                </div>
+                <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+                  <a href="#" class="btn-right" title="Eliminar Datos de Educación...">
+                    <i class="far fa-trash-alt"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="text-skill-2" class="contIndividual-skill">
+            <div class="col-md-4 centrar-h">
+              <div class="progress yellow"> <span class="progress-left"> <span class="progress-bar"></span> </span> <span class="progress-right"> <span class="progress-bar"></span> </span>
+                <div class="progress-value">
+                  37.5%
+                </div>
+              </div>
+
+              <div class="contBtn-educacion col-sm-1 centrar-h">
+                <div class="btn-edit lapizAlLado" onclick="cambiar_parrafo()">
+                  <a href="#" class="btn-right" title="Modificar Datos Educativos...">
+                    <i class="fa fa-pen"></i>
+                  </a>
+                </div>
+                <div class="btn-delete lapizAlLado" onclick="cambiar_parrafo()">
+                  <a href="#" class="btn-right" title="Eliminar Datos de Educación...">
+                    <i class="far fa-trash-alt"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+    
+      </div>
+    </div>
+    
+        <input type="file" id="file1" onChange="showFile(this)" />
 
     </div>
 
